# AoC_2025

./: .gitignore  CMakeLists.txt  main.cpp
1/: docu.md  sol_1.cpp
2/: docu.md  sol_2.cpp
3/: docu.md  sol_3.cpp
4/: docu.md  sol_4.cpp
cmake/: helper.cmake
